--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit==1.18.0
-pandas==1.5.3
-numpy==1.23.5
-chardet==4.0.0
-plotly==5.10.0
-seaborn==0.12.2
-matplotlib==3.6.2
-streamlit-option-menu==0.3.0
-openpyxl
+streamlit==1.29.0
+pandas==2.1.4
+numpy==1.26.2
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.18.0
+openpyxl==3.1.2
+chardet==5.2.0
